# LiteSpeedStore

./: .gitignore  CMakeLists.txt  README.md  TestPersistence
include/: FastTrace.hpp  StorageEngine.hpp
include/persistence/: CRC32.hpp  WAL.hpp
include/store/: IStorageEngine.hpp
src/: StorageEngine.cpp  WAL.cpp  main.cpp  test_persistence.cpp
